compiler/src/test/resources/golden/errors/type_cursor_is_opaque.dawn
pub fn main() -> Unit !io = {
  let s = "hello"
  let c = cursor_start(s)
  let d = c + 1
  println(to_string(c))
}
